test/deca/syntax/invalid/ifthenelse_elseif_incomplet.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque tout après else if)

{
    if (true) {
    
    } else if
}